# domadapter

./: .envrc  .gitignore  README.md  pyproject.toml
domadapter/commands/: domadapter_group.py  download.py  results.py
domadapter/datamodules/: clf_datamodule.py  concat_datasets.py  data.py  glue_dm.py  mnli_dm.py  sa_dm.py
domadapter/divergences/: base_divergence.py  cmd_divergence.py  coral_divergence.py  gaussian_mkmmd_divergence.py  mkmmd_divergence.py  rbf_mkmmd_divergence.py
domadapter/examples/: infer_sst.py  train_glue_adapter.py  train_sst.py  train_sst.sh
domadapter/infer/: dan_infer.py  glue_ft_infer.py
domadapter/models/: dan.py  dann.py  dann_adapter.py  domain_adapter.py  domain_task_adapter.py  glue_ft.py  linear_clf.py  stage_2_task_adapter.py  task_adapter.py
domadapter/models/ablations/: domain_adapter.py  domain_task_adapter.py  joint_domain_task_adapter.py
domadapter/models/adapters/: dann_adapter.py  dann_adapter_multiple_classifier.py  domain_adapter.py  domain_task_adapter.py  dsn_adapter.py  joint_domain_task_adapter.py
domadapter/models/ft/: finetune.py  glue_ft.py
domadapter/models/modules/: domain_clf.py  dsn_losses.py  gradient_reversal.py  linear_clf.py  (+1 more)
domadapter/orchestration/: glue_task_adapter.py  task_adapter.py  train_dan.py  train_dann.py  train_dann_adapter.py  train_dann_adapter_multiple_classifier.py  train_domain_adapter.py  train_domain_task_adapter.py  train_dsn.py  train_dsn_adapter.py  train_ft.py  train_glue_ft.py  train_joint_domain_task_adapter.py
domadapter/utils/: app.py  arguments.py  compare_adapters.py  download_utils.py  general_utils.py  mnli_utils  mnli_utils.py  run_prediction.sh  tensor_utils.py
tests/: run_predictions.sh  test_domadapter.py
tests/datamodules/: test_glue_dm.py
(+47 files in other folders)
