[tool.poetry]
name = "domadapter"
version = "0.1.0"
description = ""
authors = ["Abhinav Ramesh Kashyap <abhinavkashyap92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
adapter-transformers = "^2.1.2"
rich = "^10.7.0"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
