[tool.poetry]
name = "domadapter"
version = "0.1.0"
description = ""
authors = ["Abhinav Ramesh Kashyap <abhinavkashyap92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
adapter-transformers = "^2.1.2"
rich = "^10.7.0"
torch = "^1.9.0"
datasets = "^1.11.0"
sklearn = "^0.0"
pytorch-lightning = "^1.4.2"
loguru = "^0.5.3"
ward = "^0.63.0-beta.0"

[tool.poetry.dev-dependencies]
ward = "^0.63.0-beta.0"
black = "^21.7b0"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
