[tool.poetry]
name = "domadapter"
version = "0.1.0"
description = ""
authors = ["Abhinav Ramesh Kashyap <abhinavkashyap92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
adapter-transformers = "^2.1.2"
rich = "^10.7.0"
torch = "^1.9.0"
datasets = "^1.11.0"
pytorch-lightning = "^1.4.2"
loguru = "^0.5.3"
click = "^8.0.1"
srsly = "^2.4.1"
torchmetrics = "^0.5.1"
requests = "^2.26.0"
art = "^5.3"
luigi = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"domadapter" = "domadapter.commands.domadapter_group:main"
